crates/wxctl/src/output/snapshots/wxctl__output__plan_snapshots_test__plan_validation_failure_dark_80.snap
---
source: crates/wxctl/src/output/plan_snapshots_test.rs
expression: "validation_failure_screen(&panel(80, ColorMode::Dark, GlyphSet::Unicode))"
---
  [38;2;120;169;255m▌[0m [1mPipeline[0m
    [38;2;248;81;73m✗[0m [38;2;248;81;73mvalidation[0m

  [38;2;120;169;255m▌[0m [1mErrors[0m

    [38;2;248;81;73m✗[0m [1magent/broken_agent[0m  [38;2;125;133;144mWXCTL-V001[0m
      [38;2;125;133;144mfield[0m name
      Missing required field: name
      [38;2;120;169;255mfix[0m Add a name field to the agent resource

[38;2;248;81;73m✗[0m [1mplan failed[0m [38;2;125;133;144m·[0m run 20260612-000000-plan-abc123 [38;2;125;133;144m—[0m wxctl debug
